# dreamstuff

./: CoreDataSharing.md  Links.md  LoadMeshOK.md  ProjectHome.md  SettingUpDevelopEnvironment.md  confuse.md
GLSL/glew_check_glsl_support/: CMakeLists.txt  glew_check_glsl_version.cpp
QtG3D/src/: CMakeLists.txt  GLWidget.cpp  main.cpp
meshdeformer/: CMakeLists.txt  ChangeLog  README  TODO  build_and_run_test.sh  main.cpp
meshdeformer/Common/: Log.cpp  Log.hpp  QOutputLogger.hpp
meshdeformer/MainWindow/: CMakeLists.txt  main_widget.cpp  main_window.cpp
meshdeformer/Math/: Arcball.cpp  CMakeLists.txt  Camera.hpp  Matrix44.hpp
meshdeformer/MeshCore/: CMakeLists.txt
meshdeformer/Plugin-Curvature/: CMakeLists.txt  Curvature.cpp  Curvature.h
meshdeformer/Plugin-EDS/: CMakeLists.txt  DeformationGraph.cpp  DeformationGraph.h  EDS.cpp  EDS.h  README
meshdeformer/Plugin-TestPlugin/: CMakeLists.txt  TestPlugin.cpp  TestPlugin.h
meshdeformer/Renderer/: CMakeLists.txt  Viewport.hpp
meshdeformer/cmake/: FindPythonQt.cmake  Findassimp.cmake  Findglog.cmake  Findgtest.cmake
meshdeformer/doc/: assimp_apply_to_cgal_polyhedron.txt  google_code_style_note.org
meshdeformer/imesh/: CMakeLists.txt
meshdeformer/imesh/BasePlugin/: BaseInterface.h  BaseInterface.h~  LoggingInterface.h  MeshRenderInterface.h  StatusBarInterface.h  ToolBoxInterface.h
meshdeformer/imesh/Common/: ColorCoding.h  common.h  globals.hpp
meshdeformer/imesh/Core/: MainWindow.cpp  MainWindow.h  MeshModel.cpp  MeshModel.h  Model.cpp  Viewer.cpp  Viewer.h
meshdeformer/imesh/MeshCore/: CMakeLists.txt  MeshBuilder.h
meshdeformer/imesh/widgets/aboutDialog/: AboutDialog.ui
meshdeformer/imesh/widgets/colorIndicator/: CMakeLists.txt  ColorCodingWidget.h  ColorIndicator.cpp  ColorIndicator.h  Colorindicator.h  main.cpp
meshdeformer/imesh/widgets/consoleWidgets/: AbstractConsoleWidget.h  ConsoleWidgetManager.h
meshdeformer/imesh/widgets/pluginDialog/: PluginDialog.h  plugin_dialog.ui
meshdeformer/imesh/widgets/statusBar/: StatusBar.h
meshdeformer/models/: links.txt
meshdeformer/msvc/: TODO
meshdeformer/src/: AppData.cpp  CMakeLists.txt  ConsoleWidget.cpp  ConsoleWidget.h_backup  LoggerWidget.cpp  LoggerWidget.h  MainWidget.cpp  MainWindow.cpp  QOutputLogger.cpp  QOutputLogger.hpp  TestPlugin.h  app_data.cpp  app_data.h  main.cpp  main_widget.cpp  main_widget.h  main_window.cpp  main_window.h
meshdeformer/src/Backup/IOPlugin/: CMakeLists.txt
meshdeformer/src/Common/: globals.hpp
meshdeformer/src/Core/: MainWindow.cpp  MainWindow.h  Model.cpp  Model.h  Viewer.cpp  Viewer.h
meshdeformer/src/MainWindow/: CMakeLists.txt  QOutputLogger.hpp  app_data.cpp  app_data.h  main_widget.cpp  main_widget.h  main_window.cpp  main_window.h
meshdeformer/src/Math/: Quaternion.cpp
meshdeformer/src/Math/backup/: common.h
meshdeformer/src/MeshCore/: CMakeLists.txt  MeshBuilder.h  MeshCore.cpp  MeshCore.h  MeshLoader.h
meshdeformer/src/Renderer/: Arcball.cpp  Arcball.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Viewport.cpp
meshdeformer/src/test/: test.h  testMeshCore.h  testRenderer.h
meshdeformer/src/ui/: AboutDialog.hpp  AboutDialog.ui  ui_AboutDialog.hpp
meshdeformer/src/widgets/consoleWidgets/: ConsoleWidgetManager.cpp  ConsoleWidgetManager.h
meshdeformer/test/: CMakeLists.txt  test.h  testCurvature.h  testDeformationGraph.h  testDeformationGraphCube.h  testEDS.h  testGoogleTest.h  testHelper.h  testMeshBuilder.h  testMeshBuilderDerived.h  testMeshCore.h  testQOutputLogger.hpp  testTestPlugin.h  testVector3d.cpp
meshdeformer/test/test_data/: test_cube.off
qtCodeSnippets/PythonQtTest/: CMakeLists.txt  main.cpp
qtCodeSnippets/QtPluginTest/TestPlugin/: CMakeLists.txt  TestPlugin.h
qtCodeSnippets/ToolboxTest/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
qtCodeSnippets/ToolboxTest/Plugin-ToolBoxTest/: TestPlugin.cpp  TestPlugin.h
qtCodeSnippets/qglviewer_test/: CMakeLists.txt  MainWidget.cpp  main.cpp
qtCodeSnippets/qglviewer_test/cmake/: FindQGLViewer.cmake
qtCodeSnippets/treeWidgetTest/: CMakeLists.txt  main.cpp
trunk/CodeSnippets/InterfaceTesting/: CMakeLists.txt  MainClass.h  TestClass.h  main.cpp
trunk/CodeSnippets/qt_gtest_merge_test/: CMakeLists.txt  TestInterface.h  TestWidget.cpp  TestWidget.h  test_main.cpp
trunk/QtG3D/: CMakeLists.txt
trunk/QtG3D/include/: GLWidget.h  app_window.h
trunk/QtG3D/src/: app_window.cpp  main.cpp
trunk/meshdeformer/: CMakeLists.txt  ChangeLog  README  TODO  main.cpp  valgrind_check.sh
trunk/meshdeformer/Common/: QOutputLogger.hpp  glheaders.hpp
trunk/meshdeformer/MainWindow/: CMakeLists.txt  main_window.h
trunk/meshdeformer/Math/: Arcball.hpp  Quaternion.hpp
trunk/meshdeformer/Plugin-Curvature/: CMakeLists.txt  Curvature.cpp  Curvature.h
trunk/meshdeformer/Plugin-EDS/: CMakeLists.txt  DeformationGraph.cpp  DeformationGraph.h  EDS.cpp  EDS.h
trunk/meshdeformer/Plugin-MeanCurvature/: #MeanCurvature.hh#
trunk/meshdeformer/Plugin-TestPlugin/: CMakeLists.txt  TestPlugin.h
trunk/meshdeformer/Renderer/: Camera.cpp  Camera.hpp
trunk/meshdeformer/cmake/: CMakeLists.txt  FindQGLViewer.cmake  Findgtest.cmake
trunk/meshdeformer/doc/: TODO
trunk/meshdeformer/imesh/: CMakeLists.txt  main.cpp
trunk/meshdeformer/imesh/BasePlugin/: BaseInterface.h  MeshCoreInterface.h  (+3 more)
trunk/meshdeformer/src/: AppData.cpp  CMakeLists.txt  ConsoleWidget.h  MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h  PythonConsoleWidget.h  TestPlugin.h  app_data.cpp  app_data.h  main.cpp  main_widget.cpp  main_widget.h  main_window.cpp  main_window.h
trunk/meshdeformer/test/: CMakeLists.txt  test.h  testColorCoding.h  testCurvature.h  testDeformationGraph.h  testDeformationGraphCube.h  testEDS.h  testGoogleLog.h  testHelper.h  testLoadingDifferentMesh.h  testLog.h  testMain.cpp  testMeshBuilder.h  testMeshCore.h  testPluginLoading.h  testRenderer.h
trunk/qtCodeSnippets/PythonScriptingConsole/: CMakeLists.txt  PyExampleObject.h
trunk/qtCodeSnippets/ToolboxTest/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
(+302 files in other folders)
