PROJECT(MeshDeformer)

cmake_minimum_required(VERSION 2.6)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin )
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib )


find_package(Qt4 COMPONENTS QtCore QtGui QtOpenGL REQUIRED)
include(${QT_USE_FILE})


ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(app)

